--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,10 @@ handlers:
 
 - url: /
   script: main.app
+- url: /theory
+  script: main.app
+- url: /colophon
+  script: main.app
 - url: /Login
   script: main.app
 - url: /.*
